made webiste responsive and made many changes
